--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ header{
 }
 
 .team-work-detail-header{
-    font-size: 45px;
+    font-size: 2.8rem;
     font-weight: 500;
 }
 .second-part{
@@ -139,12 +139,78 @@ header{
 }
 
 
+/* feature section */
 
 
 
 
-/* header media */
+.feature-container{
+    max-width: 1140px;
+    align-items: center;
+    margin: 0 auto;
+    gap: 100px;
+}
 
+
+hr{
+    width: 8px;
+    height: 100px;
+    border: none;
+    background-color: #FF900E;
+}
+
+.feature-header{
+    gap: 20px;
+    max-width: 460px;
+}
+
+.feature-heading{
+    font-size: 2.8rem;
+    font-weight: bold;
+    max-width: 454px;
+}
+
+.feature-head-description{
+    max-width: 586px;
+}
+
+.feature-containers{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 30px;
+    max-width: 586px;
+}
+.feature-container-mini{
+    max-width: 514px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+}
+
+.feature-img{
+    width: 100%;
+}
+
+.primary-btn{
+    background-color: #FF900E;
+    border: none;
+    border-radius: 8px;
+    padding: 35px 33px;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+.experience-year{
+    font-size: 4rem;
+    font-weight: bold;
+}
+.experience{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+
+
+/* media */
 @media screen and (max-width: 576px) {
     /* navbar section start */
     .navbar{
