--- a/styles/style.css
+++ b/styles/style.css
@@ -219,6 +219,49 @@ hr{
     color: #fff;
 }
 
+/* fact section start */
+
+.fact-container{
+    margin: 130px auto;
+    max-width: 1140px;
+}
+
+.fact-header{
+    font-size: 2.8rem;
+}
+
+.fact-badges-container{
+    justify-content: space-around;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.fact-badges-box-main{
+    text-align: center;
+    border-radius: 8px;
+    border: 2px solid #FF900E;
+}
+
+.fact-badges-box-inside{
+    margin: 52px 35px;
+}
+
+.fact-badges-img{
+    padding-bottom: 10px;
+}
+
+.fact-badges-num{
+    font-size: 2.8rem;
+    font-weight: 600;
+    padding-bottom: 5px;
+}
+
+.fact-badges-title{
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+
 
 
 /* media */
