--- a/styles/style.css
+++ b/styles/style.css
@@ -188,11 +188,14 @@ hr{
 }
 
 .feature-container-inside{
-    padding: 30px;
+    padding: 30px 0;
 }
 
+
+
 .feature-description{
-    padding: 5px;
+
+    max-width: 543px;
 }
 
 .feature-img{
@@ -229,6 +232,9 @@ hr{
 .fact-header{
     font-size: 2.8rem;
 }
+.fact-description{
+    max-width: 540px;
+}
 
 .fact-badges-container{
     justify-content: space-around;
@@ -237,6 +243,7 @@ hr{
 }
 
 .fact-badges-box-main{
+    width: 240px;
     text-align: center;
     border-radius: 8px;
     border: 2px solid #FF900E;
@@ -244,6 +251,7 @@ hr{
 
 .fact-badges-box-inside{
     margin: 52px 35px;
+    border: 1px solid #fff;
 }
 
 .fact-badges-img{
@@ -260,7 +268,6 @@ hr{
     font-size: 1.25rem;
     font-weight: 600;
 }
-
 
 
 
@@ -316,6 +323,12 @@ hr{
     .feature-container-mini{
         margin-top: 20px;
     }
+    .feature-container-subtitle{
+        font-size: 1.2rem;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 10px;
+    }
     hr{
         height: 80px;
     }
@@ -324,12 +337,17 @@ hr{
     }
     .feature-head-description{
         text-align: center;
+        padding: 5px;
+        padding-left: 20px;
+    }
+    .feature-description{
+        padding: 20px;
     }
     .feature-image{
         margin: 0 10px;
     }
     .experience-year{
-        font-size: 3rem;
+        font-size: 2rem;
     }
     .experience{
         font-size: 1rem;
@@ -337,7 +355,22 @@ hr{
     .primary-btn{
         padding: 12px 10px;
         margin-top: 20px;
-        margin-left: 50px;
+        margin-left: 90px;
+    }
+    /* feature section end */
+
+    /* fact section start */
+    .fact-detail{
+        margin-left: 20px;
+    }
+    .break{
+        display: none;
+    }
+    .fact-badges-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
     }
 
 }
