--- a/styles/style.css
+++ b/styles/style.css
@@ -269,6 +269,42 @@ hr{
     font-weight: 600;
 }
 
+/* sponsor section */
+
+.sponsors{
+    max-width: 542px;
+    margin: 0px auto;
+    margin-top: 130px;
+}
+
+.sponsor-header{
+    font-size: 2.8rem;
+    font-weight: bold;
+    text-align: center;
+    gap: 24px;
+}
+
+.sopnsor-description{
+    max-width: 542px;
+    text-align: center;
+}
+
+.sponsors-images{
+    justify-content: space-around;
+    margin-top: 50px;
+}
+
+.sponsors-img{
+    width: 100px;
+}
+
+
+
+
+
+
+
+
 
 
 /* media */
@@ -337,8 +373,6 @@ hr{
     }
     .feature-head-description{
         text-align: center;
-        padding: 5px;
-        padding-left: 20px;
     }
     .feature-description{
         padding: 20px;
