--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,9 @@
 
 /* Shaerd styles */
 
-
+.color{
+    background-color: rgba(255, 144, 14, 0.1);
+}
 
 /* colors */
 
@@ -45,9 +47,7 @@
 }
 
 /* header */
-header{
-    background-color: rgba(255, 144, 14, 0.1);
-}
+
 
 /* Navbar */
 
@@ -299,6 +299,18 @@ hr{
     width: 100px;
 }
 
+/* footer section */
+.footer{
+    max-width: 1140px;
+    padding: 25px;
+    margin: 130px auto;
+}
+
+.footer-text{
+    max-width: 620px;
+    margin: 0 auto;
+    font-size: 1.2rem;
+}
 
 
 
